assets/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* END OF CSS RESET */

* {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    line-height: 26px;
}

/* LAYOUT */
.container {
    width: 90vw;
    margin: 30px auto;
}


/* HEADINGS */
h1 {
    font-size: 40px;
    word-spacing: 100vw;
}


/* GENERAL */
a {
    color: red;
    text-decoration: underline;
}

a:hover,
a:visited,
a:active {
    color: red;
}





/* MEDIA QUERIES */
@media screen and (min-width: 700px) {
    
    /* HEADINGS */
    h1 {
        font-size: 60px;
    }
}

